[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/qua.png" type="Texture" id=1]
[ext_resource path="res://audio/crow_caw.wav" type="AudioStream" id=2]
[ext_resource path="res://script/Qua.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 6.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload_game"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[node name="Qua" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/dead = SubResource( 4 )
anims/fly = SubResource( 3 )

[node name="Move_area" type="Area2D" parent="."]
position = Vector2( 6, 0 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Move_area"]
shape = SubResource( 5 )

[node name="Death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Qua_hit"]
